stying to position template

--- a/css/careers/position.scss
+++ b/css/careers/position.scss
@@ -41,4 +41,12 @@
             }
         }
     }
+    #application {
+        .sec-container {
+            iframe {
+                display: block;
+                margin: 0 auto;
+            }
+        }
+    }
 }
