--- a/css/careers/position.css
+++ b/css/careers/position.css
@@ -29,5 +29,8 @@
     width: 900px; }
     #positionTmpl .job-description .sec-container p, #positionTmpl .job-description .sec-container li {
       font: 16px/24px FrutigerLTStd-Light; }
+#positionTmpl #application .sec-container iframe {
+  display: block;
+  margin: 0 auto; }
 
 /*# sourceMappingURL=position.css.map */
