stying to position template

--- a/css/careers/position.scss
+++ b/css/careers/position.scss
@@ -43,6 +43,7 @@
     }
     #application {
         .sec-container {
+            width: 900px;
             iframe {
                 display: block;
                 margin: 0 auto;
