--- a/css/careers/position.scss
+++ b/css/careers/position.scss
@@ -44,6 +44,9 @@
     #application {
         .sec-container {
             width: 900px;
+            h3 {
+                margin-bottom: 30px;
+            }
             iframe {
                 display: block;
                 margin: 0 auto;
