--- a/css/careers/position.scss
+++ b/css/careers/position.scss
@@ -36,6 +36,7 @@
         width: 100%;
         .sec-container {
             width: 900px;
+            bottom: 40px;
             p, li {
                 font: 16px/24px $light;
             }
