--- a/css/careers/main.scss
+++ b/css/careers/main.scss
@@ -115,42 +115,49 @@
 
 #openings {
     .sec-container{
-        .row {
-            &:first-child {
-                margin-top: 35px;
-            }
-            &:nth-child(3n+3) {
-                margin-top: 50px;
-            }
-            .position {
-                width: 45%;
-                float: left;
+        .field-container {
+            .row {
                 &:first-child {
-                    margin-right: 10%;
+                    margin-top: 35px;
                 }
                 &:last-child {
-                    width: 45%;
-                }
-                p {
-                    font-family: $light;
-                }
-                .view-more {
-                    margin-top: 12px;
-                    background-color: $ult-primary;
-                    border: none;
-                    -webkit-border-radius: 4px;
-                    -moz-border-radius: 4px;
-                    border-radius: 4px;
-                    color: #fff;
-                    padding: 10px 14px;
-                    font-family: $regular;
-                    &:focus {
-                        outline: 0;
+                    .position:last-child {
+                        margin-top: 20px;
                     }
                 }
-            }
-            &:last-child {
-                margin-bottom: 60px;
+                &:nth-child(3n+3) {
+                    margin-top: 50px;
+                }
+                .position {
+                    width: 45%;
+                    float: left;
+                    &:first-child {
+                        margin-right: 10%;
+                    }
+                    &:last-child {
+                        width: 45%;
+                    }
+                    p {
+                        font-family: $light;
+                    }
+                    .view-more {
+                        margin-top: 12px;
+                        background-color: $ult-primary;
+                        border: none;
+                        -webkit-border-radius: 4px;
+                        -moz-border-radius: 4px;
+                        border-radius: 4px;
+                        color: #fff;
+                        padding: 10px 14px;
+                        font-family: $regular;
+                        &:focus {
+                            outline: 0;
+                        }
+                    }
+                }
+                &:last-child {
+                    margin-bottom: 60px;
+                }
             }
         }
     }
