--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,210 @@
-.slide {
+@-webkit-keyframes arrow-anim {
+  0% {
+    background-position: 0; }
+  100% {
+    background-position: -3000px; } }
+@-ms-keyframes arrow-anim {
+  0% {
+    background-position: 0; }
+  100% {
+    background-position: -3000px; } }
+@keyframes arrow-anim {
+  0% {
+    background-position: 0; }
+  100% {
+    background-position: -3000px; } }
+body {
+  font-family: "FrutigerLTStd-Roman", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px; }
+
+h1 {
+  font-family: "FrutigerLT-Bold", Helvetica, Arial, sans-serif;
+  font-size: 68px;
+  line-height: 72px;
+  margin-top: 24px;
+  margin-bottom: 0; }
+
+h2 {
+  font-family: "FrutigerLT-Bold", Helvetica, Arial, sans-serif;
+  font-size: 42px;
+  line-height: 48px;
+  margin-top: 24px;
+  margin-bottom: 24px; }
+
+body {
   width: 100%;
-  height: 100vh;
-  overflow: hidden; }
+  min-height: 100%;
+  height: auto;
+  overflow-x: hidden; }
+  body #navbar {
+    position: fixed;
+    width: 100%;
+    height: 80px;
+    z-index: 30; }
+    body #navbar .container {
+      padding: 10px 10px; }
+      body #navbar .container #logo {
+        display: block;
+        width: 270px;
+        height: 60px;
+        background-image: url("../img/new-about/Chrona-Logo.png");
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: 50% 50%; }
+  body main {
+    position: relative;
+    width: 100%;
+    top: auto;
+    left: 0; }
+    body main #all {
+      display: block;
+      margin: 0;
+      padding: 0;
+      border: 0;
+      vertical-align: baseline; }
+      body main #all #nav-dots {
+        display: block;
+        position: fixed;
+        top: 50%;
+        margin-top: -38px;
+        right: 20px;
+        z-index: 100; }
+        body main #all #nav-dots ul {
+          list-style: none; }
+          body main #all #nav-dots ul li {
+            position: relative;
+            width: 12px;
+            height: 12px;
+            margin: 12px 0;
+            cursor: pointer; }
+            body main #all #nav-dots ul li span {
+              position: relative;
+              top: 0;
+              left: 0;
+              display: block;
+              float: none;
+              width: 12px;
+              height: 12px;
+              border-radius: 12px 12px;
+              border: 2px solid #fff;
+              background: 0 0;
+              text-indent: -5555px; }
+          body main #all #nav-dots ul .active {
+            pointer-events: none; }
+            body main #all #nav-dots ul .active span {
+              background-color: #fff; }
+      body main #all #slides-wrapper {
+        width: 100%;
+        height: 100vh;
+        position: fixed;
+        z-index: 10;
+        overflow: hidden; }
+        body main #all #slides-wrapper #intro {
+          position: fixed; }
+          body main #all #slides-wrapper #intro .overlay {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            z-index: -1;
+            background: -moz-linear-gradient(left, rgba(27, 15, 101, 0.9) 0%, rgba(59, 59, 168, 0.8) 100%);
+            /* FF3.6-15 */
+            background: -webkit-linear-gradient(left, rgba(27, 15, 101, 0.91) 0%, rgba(59, 59, 168, 0.8) 100%);
+            /* Chrome10-25,Safari5.1-6 */
+            background: linear-gradient(to right, rgba(27, 15, 101, 0.9) 0%, rgba(59, 59, 168, 0.8) 100%);
+            /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cc3b3ba8', endColorstr='#cc3b3ba8',GradientType=1 );
+            /* IE6-9 */ }
+          body main #all #slides-wrapper #intro .statement {
+            width: 650px;
+            position: relative;
+            margin-left: 10%;
+            text-align: left;
+            position: relative;
+            display: inline-block;
+            -webkit-transform: translateY(210%);
+            -moz-transform: translateY(210%);
+            -ms-transform: translateY(210%);
+            -o-transform: translateY(210%);
+            transform: translateY(210%); }
+            body main #all #slides-wrapper #intro .statement h1 {
+              color: #fff; }
+          body main #all #slides-wrapper #intro .arrow-go-down {
+            -webkit-animation: arrow-anim 4s steps(60, end) infinite;
+            -ms-animation: arrow-anim 4s steps(60, end) infinite;
+            animation: arrow-anim 4s steps(60, end) infinite;
+            background: transparent url(../img/new-about/anim-down-arrows.png) no-repeat 0 0;
+            background-size: auto 86px;
+            display: block;
+            position: absolute;
+            left: -7px;
+            bottom: -120px;
+            width: 50px;
+            height: 86px;
+            cursor: pointer; }
+          body main #all #slides-wrapper #intro .intro-bg {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -2;
+            width: 100%;
+            height: 100%;
+            background-image: url(../img/new-about/sleeping-woman.jpg);
+            background-size: cover;
+            overflow: hidden; }
+        body main #all #slides-wrapper #why {
+          display: -webkit-flex;
+          display: flex;
+          padding: 0;
+          background-color: red;
+          -webkit-align-items: center;
+          -ms-flex-align: center;
+          align-items: center;
+          -webkit-justify-content: center;
+          -ms-flex-pack: center;
+          justify-content: center; }
+      body main #all .relative-wrapper {
+        position: relative;
+        z-index: 20;
+        padding-top: 100vh; }
+        body main #all .relative-wrapper .wrapper-end {
+          position: relative; }
+          body main #all .relative-wrapper .wrapper-end footer {
+            position: relative;
+            height: 90px;
+            width: 100%;
+            overflow: hidden; }
+      body main #all .slide {
+        position: relative;
+        width: 100%;
+        height: 100vh;
+        overflow: hidden;
+        transform: translateY(0%);
+        -webkit-transition: transform 1.1s;
+        -moz-transition: transform 1.1s;
+        -ms-transition: transform 1.1s;
+        -o-transition: transform 1.1s;
+        transition: transform 1.1s; }
+      body main #all .hide-slide {
+        transform: translateY(-100%); }
+      body main #all .fixed {
+        position: fixed;
+        top: 0;
+        left: 0; }
+      body main #all .vert-center {
+        position: relative;
+        display: inline-block;
+        -webkit-transform: translateY(50%);
+        -moz-transform: translateY(50%);
+        -ms-transform: translateY(50%);
+        -o-transform: translateY(50%);
+        transform: translateY(50%); }
+      body main #all .z5 {
+        z-index: 5; }
+      body main #all .z10 {
+        z-index: 10; }
+      body main #all .z15 {
+        z-index: 15; }
 
 /*# sourceMappingURL=about.css.map */
