--- a/css/about.scss
+++ b/css/about.scss
@@ -1,41 +1,285 @@
-body {
-    .navbar {
-        .container {
-            #logo {
+// Fonts
+$light: 'FrutigerLTStd-Light', Helvetica, Arial, sans-serif;
+$regular: 'FrutigerLTStd-Roman', Helvetica, Arial, sans-serif;
+$bold: 'FrutigerLT-Bold', Helvetica, Arial, sans-serif;
 
-            }
-        }
+// Colors
+$blue: #3B3BA8;
+$gold: #E7A236;
+
+// Mixins
+@mixin vert-center($transY) {
+    position: relative;
+    display: inline-block;
+    -webkit-transform: translateY($transY);
+    -moz-transform: translateY($transY);
+    -ms-transform: translateY($transY);
+    -o-transform: translateY($transY);
+    transform: translateY($transY);
+}
+
+@-webkit-keyframes arrow-anim {
+    0% {
+        background-position: 0
+    }
+
+    100% {
+        background-position: -3000px
     }
 }
 
-.slide {
+@-ms-keyframes arrow-anim {
+    0% {
+        background-position: 0
+    }
+
+    100% {
+        background-position: -3000px
+    }
+}
+
+@keyframes arrow-anim {
+    0% {
+        background-position: 0
+    }
+
+    100% {
+        background-position: -3000px
+    }
+}
+
+
+body {
+    font-family: $regular;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+}
+h1 {
+    font-family: $bold;
+    font-size: 68px;
+    line-height: 72px;
+    margin-top: 24px;
+    margin-bottom: 0;
+}
+h2 {
+    font-family: $bold;
+    font-size: 42px;
+    line-height: 48px;
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+
+body {
     width: 100%;
-    height: 100vh;
-    overflow: hidden;
-}
+    min-height: 100%;
+    height: auto;
+    overflow-x: hidden;
+    #navbar {
+        position: fixed;
+        width: 100%;
+        height: 80px;
+        z-index: 30;
+        .container {
+            padding: 10px 10px;
+            #logo {
+                display: block;
+                width: 270px;
+                height: 60px;
+                background-image: url("../img/new-about/Chrona-Logo.png");
+                background-size: contain;
+                background-repeat: no-repeat;
+                background-position: 50% 50%;
+            }
+        }
+    }
+    main {
+        position: relative;
+        width: 100%;
+        top: auto;
+        left: 0;
+        #all {
+            display: block;
+            margin: 0;
+            padding: 0;
+            border: 0;
+            vertical-align: baseline;
+            #nav-dots {
+                display: block;
+                position: fixed;
+                top: 50%;
+                margin-top: -38px;
+                right: 20px;
+                z-index: 100;
+                ul {
+                    list-style: none;
+                    li {
+                        position: relative;
+                        width: 12px;
+                        height: 12px;
+                        margin: 12px 0;
+                        cursor: pointer;
+                        span {
+                            position: relative;
+                            top: 0;
+                            left: 0;
+                            display: block;
+                            float: none;
+                            width: 12px;
+                            height: 12px;
+                            border-radius: 12px 12px;
+                            border: 2px solid #fff;
+                            background: 0 0;
+                            text-indent: -5555px;
+                        }
+                    }
+                    .active {
+                        pointer-events: none;
+                        span {
+                            background-color: #fff;
+                        }
+                    }
+                }
+            }
+            #slides-wrapper {
+                width: 100%;
+                height: 100vh;
+                position: fixed;
+                z-index: 10;
+                overflow: hidden;
+                #intro {
+                    position: fixed;
+                    //text-align: center;
+                    .overlay {
+                        width: 100%;
+                        height: 100%;
+                        position: absolute;
+                        z-index: -1;
+                        background: -moz-linear-gradient(left,  rgba(27, 15, 101, 0.9) 0%, rgba(59,59,168,0.8) 100%); /* FF3.6-15 */
+                        background: -webkit-linear-gradient(left,  rgba(27, 15, 101, 0.91) 0%,rgba(59,59,168,0.8) 100%); /* Chrome10-25,Safari5.1-6 */
+                        background: linear-gradient(to right,  rgba(27, 15, 101, 0.9) 0%,rgba(59,59,168,0.8) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+                        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cc3b3ba8', endColorstr='#cc3b3ba8',GradientType=1 ); /* IE6-9 */
+                    }
+                    .statement {
+                        width: 650px;
+                        position: relative;
+                        margin-left: 10%;
+                        text-align: left;
+                        @include vert-center(210%);
+                        h1 {
+                            color: #fff;
+                        }
+                    }
+                    .arrow-go-down {
+                        -webkit-animation: arrow-anim 4s steps(60,end) infinite;
+                        -ms-animation: arrow-anim 4s steps(60,end) infinite;
+                        animation: arrow-anim 4s steps(60,end) infinite;
+                        background: transparent url(../img/new-about/anim-down-arrows.png) no-repeat 0 0;
+                        background-size: auto 86px;
+                        display: block;
+                        position: absolute;
+                        left: -7px;
+                        bottom: -120px;
+                        width: 50px;
+                        height: 86px;
+                        cursor: pointer;
+                    }
+                    .intro-bg {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        z-index: -2;
+                        width: 100%;
+                        height: 100%;
+                        background-image: url(../img/new-about/sleeping-woman.jpg);
+                        background-size: cover;
+                        overflow: hidden;
+                    }
+                }
 
-#intro {
+                #why {
+                    display: -webkit-flex;
+                    display: flex;
+                    padding: 0;
+                    background-color: red;
+                    -webkit-align-items: center;
+                    -ms-flex-align: center;
+                    align-items: center;
+                    -webkit-justify-content: center;
+                    -ms-flex-pack: center;
+                    justify-content: center;
+                }
+            }
+            .relative-wrapper {
+                position: relative;
+                z-index:20;
+                padding-top: 100vh;
+                .wrapper-end {
+                    position: relative;
+                    footer {
+                        position: relative;
+                        height: 90px;
+                        width: 100%;
+                        overflow: hidden;
+                    }
+                }
+                #how {
 
-}
+                }
 
-#why {
+                #progress {
 
-}
+                }
 
-#how {
+                #team {
 
-}
+                }
 
-#progress {
+                #vision {
 
-}
-
-#team {
-
-}
-
-#vision {
-
+                }
+            }
+            .slide {
+                position: relative;
+                width: 100%;
+                height: 100vh;
+                overflow: hidden;
+                transform: translateY(0%);
+                -webkit-transition: transform 1.1s;
+                -moz-transition: transform 1.1s;
+                -ms-transition: transform 1.1s;
+                -o-transition: transform 1.1s;
+                transition: transform 1.1s;
+                //-webkit-transition-delay: .25s;
+                //-moz-transition-delay: .25s;
+                //-ms-transition-delay: .25s;
+                //-o-transition-delay: .25s;
+                //transition-delay: .25s;
+                //-o-transition-timing-function: ease-in;
+                //transition-timing-function: ease-in;
+            }
+            .hide-slide {
+                transform: translateY(-100%);
+            }
+            .fixed {
+                position: fixed;
+                top: 0;
+                left: 0;
+            }
+            .vert-center {
+                @include vert-center(50%);
+            }
+            .z5 {
+                z-index: 5;
+            }
+            .z10 {
+                z-index: 10;
+            }
+            .z15 {
+                z-index: 15;
+            }
+        }
+    }
 }
 
 #footer {
