--- a/css/chrona-landing.css
+++ b/css/chrona-landing.css
@@ -1,3 +1,229 @@
+body {
+  font-family: "FrutigerLTStd-Roman", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px; }
 
+h1 {
+  font-family: "FrutigerLT-Bold", Helvetica, Arial, sans-serif;
+  font-size: 68px;
+  line-height: 72px;
+  margin-top: 24px;
+  margin-bottom: 0; }
+
+h2 {
+  font-family: "FrutigerLTStd-Roman", Helvetica, Arial, sans-serif;
+  font-size: 42px;
+  line-height: 48px;
+  margin-top: 24px;
+  margin-bottom: 24px; }
+
+.fixed {
+  position: fixed;
+  top: 0;
+  left: 0; }
+
+.navbar {
+  z-index: 5;
+  width: 100%;
+  background-color: rgba(30, 30, 30, 0.1); }
+  .navbar #logo-container {
+    margin-bottom: 20px; }
+    .navbar #logo-container img {
+      display: block;
+      width: 260px;
+      margin: 15px auto 0; }
+
+.bg-images {
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  background-size: cover;
+  background-position: -120px 0; }
+
+.white-overlay {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  opacity: 0.05;
+  z-index: -1; }
+
+.info-text {
+  margin-top: 320px;
+  margin-left: 7%;
+  width: 280px; }
+  .info-text h1 {
+    margin-top: 0;
+    font-family: "FrutigerLTStd-Light", Helvetica, Arial, sans-serif;
+    font-size: 36px;
+    line-height: 50px;
+    color: #00259a; }
+  .info-text p {
+    font-family: "FrutigerLTStd-Light", Helvetica, Arial, sans-serif;
+    color: #4D4D4D;
+    margin-top: 12px;
+    font-size: 18px;
+    line-height: 24px;
+    margin-right: 0; }
+  .info-text .external-btn {
+    display: inline-block;
+    margin-top: 12px;
+    border: 2px solid #00259a;
+    border-radius: 6px;
+    padding: 8px 20px;
+    color: #00259a;
+    font-family: "FrutigerLTStd-Light", Helvetica, Arial, sans-serif;
+    font-size: 18px; }
+    .info-text .external-btn:hover, .info-text .external-btn:focus {
+      text-decoration: none;
+      background-color: rgba(0, 37, 154, 0.05);
+      cursor: pointer; }
+  .info-text .learn-more-btn {
+    margin-right: 16px; }
+
+.newsletter-subscribe {
+  padding: 1px;
+  width: 280px;
+  margin-left: 7%;
+  margin-top: 32px; }
+  .newsletter-subscribe h3 {
+    font-family: "FrutigerLTStd-Light", Helvetica, Arial, sans-serif;
+    line-height: 1.4;
+    color: #00259a;
+    margin-bottom: 24px; }
+  .newsletter-subscribe #mc_embed_signup_scroll .mc-field-group input {
+    width: 100%;
+    border: solid 2px #00259a;
+    border-radius: 6px;
+    background-color: transparent;
+    color: #00259a;
+    font-family: "FrutigerLTStd-Light", Helvetica, Arial, sans-serif;
+    font-size: 18px;
+    padding: 8px 12px;
+    margin-bottom: 16px;
+    outline: none; }
+  .newsletter-subscribe #mc_embed_signup_scroll .button {
+    background-color: #00259a;
+    color: #fff;
+    border: none;
+    border-radius: 6px;
+    padding: 10px 32px;
+    margin-bottom: 40px;
+    font-family: "FrutigerLTStd-Light", Helvetica, Arial, sans-serif;
+    font-size: 18px;
+    outline: none; }
+    .newsletter-subscribe #mc_embed_signup_scroll .button:hover {
+      background-color: #00218b; }
+  .newsletter-subscribe ::-webkit-input-placeholder {
+    opacity: .8;
+    color: #00259a;
+    font-family: "FrutigerLTStd-Light", Helvetica, Arial, sans-serif;
+    font-size: 18px; }
+  .newsletter-subscribe :-moz-placeholder {
+    opacity: .8;
+    color: #00259a;
+    font-family: "FrutigerLTStd-Light", Helvetica, Arial, sans-serif;
+    font-size: 18px; }
+  .newsletter-subscribe ::-moz-placeholder {
+    opacity: .8;
+    color: #00259a;
+    font-family: "FrutigerLTStd-Light", Helvetica, Arial, sans-serif;
+    font-size: 18px; }
+  .newsletter-subscribe :-ms-input-placeholder {
+    opacity: .8;
+    color: #00259a;
+    font-family: "FrutigerLTStd-Light", Helvetica, Arial, sans-serif;
+    font-size: 18px; }
+
+/* ! --- TAG BOOTSTRAP MEDIA QUERIES ---- */
+                                            /*
+================================================== */
+/*! TAG Bootstrap XS */
+                       /*
+All Mobile Sizes (devices and browser) */
+/*! TAG Bootstrap Small */
+                          /*
+Tablet portrait and larger */
+@media (min-width: 768px) {
+  .navbar #logo-container img {
+    display: block;
+    width: 260px;
+    margin: 15px auto 0; }
+
+  .bg-images {
+    background-size: cover;
+    background-position: 0 0; }
+
+  .info-text {
+    margin-top: 560px;
+    margin-left: 10%;
+    width: 400px; }
+    .info-text h1 {
+      font-size: 54px;
+      line-height: 66px; }
+    .info-text p {
+      font-size: 18px;
+      line-height: 24px; }
+    .info-text .external-btn {
+      padding: 10px 24px;
+      font-size: 22px; }
+    .info-text .learn-more-btn {
+      margin-right: 20px; }
+
+  .newsletter-subscribe {
+    padding: 1px;
+    width: 400px;
+    margin-left: 10%;
+    margin-top: 32px; }
+    .newsletter-subscribe #mc_embed_signup_scroll .mc-field-group input {
+      width: 100%; }
+    .newsletter-subscribe ::-webkit-input-placeholder {
+      font-size: 18px; }
+    .newsletter-subscribe :-moz-placeholder {
+      font-size: 18px; }
+    .newsletter-subscribe ::-moz-placeholder {
+      font-size: 18px; }
+    .newsletter-subscribe :-ms-input-placeholder {
+      font-size: 18px; } }
+/*! TAG Bootstrap Medium */
+                           /*
+Tablet portrait and larger */
+@media (min-width: 920px) {
+  .info-text {
+    margin-top: 510px;
+    margin-left: 10%;
+    width: 490px; }
+    .info-text h1 {
+      font-size: 66px;
+      line-height: 80px; }
+    .info-text p {
+      font-size: 22px;
+      line-height: 34px; } }
+/*! TAG Bootstrap Large */
+                          /*
+Tablet portrait and larger */
+@media (min-width: 1176px) {
+  .info-text {
+    display: inline-block;
+    margin-left: 8%; }
+
+  .newsletter-subscribe {
+    float: right;
+    display: inline-block;
+    padding: 1px;
+    width: 450px;
+    margin: 510px 8% 0 0; }
+    .newsletter-subscribe h3 {
+      margin-top: 8px; }
+    .newsletter-subscribe #mc_embed_signup_scroll .mc-field-group input {
+      width: 100%; }
+    .newsletter-subscribe ::-webkit-input-placeholder {
+      font-size: 18px; }
+    .newsletter-subscribe :-moz-placeholder {
+      font-size: 18px; }
+    .newsletter-subscribe ::-moz-placeholder {
+      font-size: 18px; }
+    .newsletter-subscribe :-ms-input-placeholder {
+      font-size: 18px; } }
 
 /*# sourceMappingURL=chrona-landing.css.map */
