--- a/css/chrona-landing.scss
+++ b/css/chrona-landing.scss
@@ -1,1 +1,379 @@
-$BLUE: #00259A;
+// TAG Variables
+
+// Fonts
+$light: 'FrutigerLTStd-Light', Helvetica, Arial, sans-serif;
+$regular: 'FrutigerLTStd-Roman', Helvetica, Arial, sans-serif;
+$bold: 'FrutigerLT-Bold', Helvetica, Arial, sans-serif;
+
+// Colors
+$blue: #00259a;
+$gold: #f7a800;
+$gray: #4D4D4D;
+
+// Breakpoints
+$screen-sm-min: 768px;
+$screen-md-min: 920px;
+$screen-lg-min: 1176px;
+
+// TAG Mixins
+@mixin vert-center($transY) {
+    position: relative;
+    display: inline-block;
+    -webkit-transform: translateY($transY);
+    -moz-transform: translateY($transY);
+    -ms-transform: translateY($transY);
+    -o-transform: translateY($transY);
+    transform: translateY($transY);
+}
+
+// TAG Global Styles
+body {
+    font-family: $regular;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+}
+h1 {
+    font-family: $bold;
+    font-size: 68px;
+    line-height: 72px;
+    margin-top: 24px;
+    margin-bottom: 0;
+}
+h2 {
+    font-family: $regular;
+    font-size: 42px;
+    line-height: 48px;
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+.fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+// TAG Navbar
+.navbar {
+    z-index: 5;
+    width: 100%;
+    background-color: rgba(30,30,30,.1);
+    #logo-container {
+        margin-bottom: 20px;
+        img {
+            display: block;
+            width: 260px;
+            margin: 15px auto 0;
+        }
+    }
+}
+
+// TAG Background Images
+.bg-images {
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    background-size: cover;
+    background-position: -120px 0;
+}
+
+//TAG White Overlay BG
+.white-overlay {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    opacity: 0.05;
+    z-index: -1;
+}
+
+// TAG Info Text
+.info-text {
+    margin-top: 320px;
+    margin-left: 7%;
+    width: 280px;
+    h1 {
+        margin-top: 0;
+        font-family: $light;
+        font-size: 36px;
+        line-height: 50px;
+        color: $blue;
+    }
+    p {
+        font-family: $light;
+        color: #4D4D4D;
+        margin-top: 12px;
+        font-size: 18px;
+        line-height: 24px;
+        margin-right: 0;
+    }
+    .external-btn {
+        display: inline-block;
+        margin-top: 12px;
+        border: 2px solid $blue;
+        border-radius: 6px;
+        padding: 8px 20px;
+        color: $blue;
+        font-family: $light;
+        font-size: 18px;
+        &:hover, &:focus {
+            text-decoration: none;
+            background-color: rgba($blue,0.05);
+            cursor: pointer;
+        }
+    }
+    .learn-more-btn {
+        margin-right: 16px;
+    }
+}
+
+// TAG Newsletter Subscribe
+.newsletter-subscribe {
+    padding: 1px;
+    width: 280px;
+    margin-left: 7%;
+    margin-top: 32px;
+    h3 {
+        font-family: $light;
+        line-height: 1.4;
+        color: $blue;
+        margin-bottom: 24px;
+    }
+    #mc_embed_signup_scroll {
+        .mc-field-group {
+            #mce-NAME {}
+            // TAG -- Input Fields
+            input {
+                width: 100%;
+                border: solid 2px $blue;
+                border-radius: 6px;
+                background-color: transparent;
+                color: $blue;
+                font-family: $light;
+                font-size: 18px;
+                padding: 8px 12px;
+                margin-bottom: 16px;
+                outline: none;
+            }
+        }
+        // TAG -- Button
+        .button {
+            //height: 28px;
+            background-color: $blue;
+            color: #fff;
+            border: none;
+            border-radius: 6px;
+            padding: 10px 32px;
+            margin-bottom: 40px;
+            font-family: $light;
+            font-size: 18px;
+            outline: none;
+            &:hover {
+                background-color: darken($blue, 3%);
+            }
+        }
+    }
+    // TAG -- Placeholder
+    ::-webkit-input-placeholder {
+        opacity: .8;
+        color: $blue;
+        font-family: $light;
+        font-size: 18px;
+    }
+    :-moz-placeholder {
+        opacity: .8;
+        color: $blue;
+        font-family: $light;
+        font-size: 18px;
+    }
+    ::-moz-placeholder {
+        opacity: .8;
+        color: $blue;
+        font-family: $light;
+        font-size: 18px;
+    }
+    :-ms-input-placeholder {
+        opacity: .8;
+        color: $blue;
+        font-family: $light;
+        font-size: 18px;
+    }
+}
+
+
+/* ! --- TAG BOOTSTRAP MEDIA QUERIES ---- *//*
+================================================== */
+
+
+/*! TAG Bootstrap XS *//*
+All Mobile Sizes (devices and browser) */
+@media (max-width: ($screen-sm-min - 1)) {}
+
+/*! TAG Bootstrap Small *//*
+Tablet portrait and larger */
+@media (min-width: $screen-sm-min) {
+    // TAG -- Navbar
+    .navbar {
+        #logo-container {
+            img {
+                display: block;
+                width: 260px;
+                margin: 15px auto 0;
+            }
+        }
+    }
+
+    // TAG -- Background Images
+    .bg-images {
+        background-size: cover;
+        background-position: 0 0;
+    }
+    .info-text {
+        margin-top: 560px;
+        margin-left: 10%;
+        width: 400px;
+        h1 {
+            font-size: 54px;
+            line-height: 66px;
+        }
+        p {
+            font-size: 18px;
+            line-height: 24px;
+        }
+        .external-btn {
+            padding: 10px 24px;
+            font-size: 22px;
+            &:hover, &:focus {
+            }
+        }
+        .learn-more-btn {
+            margin-right: 20px;
+        }
+    }
+
+    // TAG -- Newsletter Subscribe
+    .newsletter-subscribe {
+        padding: 1px;
+        width: 400px;
+        margin-left: 10%;
+        margin-top: 32px;
+        h3 {
+        }
+        #mc_embed_signup_scroll {
+            .mc-field-group {
+                #mce-NAME {}
+                // TAG -- -- Input Fields
+                input {
+                    width: 100%;
+                }
+            }
+            // TAG -- -- Button
+            .button {
+                &:hover {
+                }
+            }
+        }
+        // TAG -- -- Placeholder
+        ::-webkit-input-placeholder {
+            font-size: 18px;
+        }
+        :-moz-placeholder {
+            font-size: 18px;
+        }
+        ::-moz-placeholder {
+            font-size: 18px;
+        }
+        :-ms-input-placeholder {
+            font-size: 18px;
+        }
+    }
+}
+
+
+/*! TAG Bootstrap Medium *//*
+Tablet portrait and larger */
+@media (min-width: $screen-md-min) {
+    // TAG -- Background Images
+    .bg-images {}
+    .info-text {
+        margin-top: 510px;
+        margin-left: 10%;
+        width: 490px;
+        h1 {
+            font-size: 66px;
+            line-height: 80px;
+        }
+        p {
+            font-size: 22px;
+            line-height: 34px;
+        }
+        .external-btn {
+            &:hover, &:focus {}
+        }
+        .learn-more-btn {}
+    }
+}
+
+
+/*! TAG Bootstrap Large *//*
+Tablet portrait and larger */
+@media (min-width: $screen-lg-min) {
+
+
+    // TAG -- Background Images
+    .bg-images {}
+    .info-text {
+        display: inline-block;
+        margin-left: 8%;
+        h1 {
+
+        }
+        p {
+
+        }
+        .external-btn {
+            &:hover, &:focus {}
+        }
+        .learn-more-btn {}
+    }
+
+
+    // TAG -- Newsletter Subscribe
+    .newsletter-subscribe {
+        float: right;
+        display: inline-block;
+        padding: 1px;
+        width: 450px;
+        margin: 510px 8% 0 0;
+        h3 {
+            margin-top: 8px;
+        }
+        #mc_embed_signup_scroll {
+            .mc-field-group {
+                #mce-NAME {}
+                // TAG -- -- Input Fields
+                input {
+                    width: 100%;
+                }
+            }
+            // TAG -- -- Button
+            .button {
+                &:hover {
+                }
+            }
+        }
+        // TAG -- -- Placeholder
+        ::-webkit-input-placeholder {
+            font-size: 18px;
+        }
+        :-moz-placeholder {
+            font-size: 18px;
+        }
+        ::-moz-placeholder {
+            font-size: 18px;
+        }
+        :-ms-input-placeholder {
+            font-size: 18px;
+        }
+    }
+
+}
